clean/main.css
/* ... */
div.thumb div a img { 
	border: 1px solid #ccc;
}

div.thumb div div.thumbcaption {
	border: none;
	text-align: left;
	line-height: 1.4em;
	padding: .3em 0 .1em 0;
}

div.magnify {
	float: right;
	border: none !important;
	background: none !important;
}

div.magnify a, div.magnify img {
	display: block;
	border: none !important;
	background: none !important;
}

div.tright {
	clear: right;
	float: right; 
	border-width: .5em 0 .8em 1.4em;
	_border: 0px;
	_margin: .5em 0 .8em 1.4em;
}

div.tleft {
	float: left;
	margin-right: .5em;
	border-width: .5em 1.4em .8em 0;
	_border: 0px;
	_margin: .5em 1.4em .8em 0;
}

.hiddenStructure {
	display: none;
}

img.tex {
	vertical-align: middle;
}

span.texhtml {
	font-family: serif;
}

/* Misc Styling */

div[class=fullImageLink] a:last-child {
	display: block;
	padding-top: 10px;
}

.rcoptions {
	line-height: 150%;
}

span.searchmatch {
	color: red;
}

#relatedChanges a:first-child {
	font-size: 120%;
	font-weight: bold;
}

#relatedChanges a:first-child:before {
	content: "for ";
}

#relatedChanges hr {
	display: none;
}

#catlinks {
	margin-top: 20px;
        border: 1px solid #aaa;
        background-color: #EFEFEF;
        padding: 5px;
        padding-left: 7px;
}

#catlinks p {
        margin: 0;
        padding: 0;
}

#catlinks a[title="Special:Categories"] {
        font-weight: bold;
}

